test/good3.cminor
x: integer;
y: integer = 123;
b: boolean = false;
c: char    = 'q';
s: string  = "hello cminor\n";
a: array [5] integer;
a: array [5] integer = {1,2,3,4,5};
x: integer = 65;
y: char = 'A';
if(x>y) // error: x and y are of different types!

f: integer = 0;
if(f) // error: f is not a boolean!

writechar: function void ( char c );
a: integer = 65;
writechar(a);  // error: a is not a char!

b: array [2] boolean = {true,false};
x: integer = 0;
x = b[0];      // error: x is not a boolean!
print "The temperature is: ", temp, " degrees\n";
square: function integer ( x: integer ) = {
	return x^2;
}
printarray: function void ( a: array [] integer, size: integer ) = {
	i: integer;
	for( i=0;i<size;i++) {
		print a[i], "\n";
	}
}
puts: function void ( s: string );

main: function integer () = {
	puts("hello world");
}
